# BluetoothGlucose

./: .gitignore  CMakeLists.txt  README.md
ble-dump/: AttributeStream.cpp  AttributeStream.h  BleApplication.cpp  BleApplication.h  BleServiceBase.cpp  BleServiceBase.h  CMakeLists.txt  CurrentTimeServiceProfile.cpp  CurrentTimeServiceProfile.h  DeviceInformationServiceProfile.cpp  DeviceInformationServiceProfile.h  GlucoseServiceProfile.cpp  GlucoseServiceProfile.h  Scanner.cpp  Scanner.h  TrustedDevice.cpp  TrustedDevice.h  UUID.cpp  UUID.h  Utils.h  exceptions.h  main.cpp
cmake/: FindSimpleBLE.cmake  FindSimpleBluez.cmake  Findsimpleble.cmake  version.cmake
include/ble-dump/: BleApplication.h  BleServiceBase.h  GlucoseServiceProfile.h  Scanner.h  exceptions.h
src/ble-dump/: AttributeStream.cpp  BleApplication.cpp  BleServiceBase.cpp  CMakeLists.txt  CurrentTimeServiceProfile.cpp  DeviceInformationServiceProfile.cpp  GlucoseServiceProfile.cpp  Scanner.cpp  TrustedDevice.cpp  UUID.cpp  main.cpp
